# stream

./: README.md  pyproject.toml
freestream/: 🏡_Home.py
freestream/pages/: 1_💬_Curie.py  2_🤖_RAGbot.py
freestream/pages/.archive/: utility_funcs.py
freestream/pages/utils/: __init__.py  chatbot_operators.py  lc_premade.py  streamlit_operators.py  styles.py  utility_funcs.py
