[tool.poetry]

name = "FreeStream"
version = "4.2.0"
description = "Template repository for building chatbots."
authors = ["Daethyra <109057945+Daethyra@users.noreply.github.com>"]
readme = "README.md"
license = "GNU AGPL"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

langchain = "^0.2.3"
langchain-openai = "^0.1.7"
streamlit = "1.35.0"
unstructured = {extras = ["all-docs"], version = "^0.14.4"}
sentence-transformers = "^2.3.1"
faiss-cpu = "^1.7.4"
setuptools = "^69.1.0"
torch = "^2.2.0"
opencv-python-headless = "^4.9.0.80"
langchain-anthropic = "^0.1.15"
langchain-community = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
